# pi-backend

./: .dockerignore  .env.example  .gitignore  .htaccess  DATABASE_SCHEMA.md  DEPLOYMENT.md  DOCS.md  Dockerfile  Makefile  PRODUCTION-SETUP.md  README.md  TIER-MATRIX.md  alembic.ini  docker-compose.yml  index.php  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: cron.yml
app/: __init__.py  favicon_base64.txt  main.py  models.py  worker.py
app/admin/: audit.py  models.py  schemas.py  schemas_cloud.py  service.py
app/billing/: __init__.py  router.py  schemas.py  stripe_subscription.py
app/celery_tasks/: token_reset.py
app/core/: __init__.py  base.py  config.py  db.py  deps.py  exceptions.py  logging_conf.py  middleware.py  redis_client.py  schemas.py  source_plugin.py
app/models/: tenant.py
app/pi_ai_cloud/: __init__.py  models.py  schemas.py
app/pi_analytics/: __init__.py
app/pi_chatbot/: __init__.py  schemas.py
docs/: 01-DATABASE.md  02-API.md  API.md  DATABASE.md  DEPLOYMENT.md  DEPLOY_FULL.md  DEPLOY_RAILWAY.md  MODELS.md  PI_AI_CLOUD.md  QUICKSTART.md  README.md  TEST_CHECKLIST.md  WP_PLUGIN_INTEGRATION.md
migrations/: env.py
scratch/: list_users.py
scripts/: __init__.py  build_plugins.sh  create_admin.py  create_license.py  full_reset.py  migrate-wp-tenant-id.sh  promote_admin_to_enterprise.py  seed_ai_providers.py  seed_localhost.py  seed_pi_users.py  seed_pool_keys.py  seed_pro_licenses.py  seed_templates.py  seed_test_tenants.py  start.sh  upload_release.py
tests/: conftest.py  test_health.py  test_license_service.py  test_prompts.py  test_quota_reset.py  test_scorer.py  test_sqladmin_auth.py  test_stripe_subscription.py  test_tier_enforcement.py
(+120 files in other folders)
