[project]
name = "pi-backend"
version = "0.1.0"
description = "Pi Ecosystem backend API — license, AI, SEO, telemetry"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Pi Ecosystem", email = "pi.ai2@pitechco.com" }]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",

    # Database
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache / queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",

    # Validation / settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "email-validator>=2.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.20",

    # HTTP client
    "httpx>=0.28.0",

    # AI SDKs
    "anthropic>=0.40.0",
    "openai>=1.58.0",

    # HTML / NLP
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "textstat>=0.7.4",
    "langdetect>=1.0.9",

    # Utils
    "python-slugify>=8.0.4",
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
    "types-redis>=4.6.0",
    "faker>=33.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RET", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
